--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-        href="{{url_for('static',path='/css/app.css')}}"
-        rel="stylesheet"
-    />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="{{url_for('static',path='/css/app.css')}}" rel="stylesheet" />
   </head>
-  <body>
-    <h1 class="p-4 bg-blue-200">Hello World</h1>
-  </body>
+
+<body>
+  <div class="p-12 font-serif text-left">
+    <!-- Personal Information -->
+    <div class="text-lg text-center">
+      {{ resumeData.personal.name }}
+    </div>
+    <div class="text-center flex justify-evenly">
+      <span>
+        {{ resumeData.personal.phoneNumber }}
+      </span>
+      <span class="text-blue-400">
+        {{ resumeData.personal.eMail }}
+      </span>
+      <span class="text-blue-400">
+        {{ resumeData.personal.city }}, {{ resumeData.personal.state }}
+      </span>
+      {% if resumeData.links.linkedin %}
+      <span class="text-blue-400">
+        {{ resumeData.links.linkedin }}
+      </span>
+      {% endif %}
+    </div>
+    <span class="inline-block text-center h-px w-full bg-black"></span>
+
+    <!-- Profile -->
+    {% if resumeData.personal.about %}
+    <div class="profile">
+      <span class="font-bold">Profile</span>
+      <p class="ml-8">
+        {{ resumeData.personal.about }}
+      </p>
+    </div>
+    {% endif %}
+
+    <!-- Qualifications -->
+    <div class="qualifications">
+      <span class="font-bold">Qualifications</span>
+      <ul class="ml-8">
+        {% if resumeData.qualifications.technicalSkills %}
+        <li>
+          <span class="font-semibold">Technical Skills:</span>
+          <span>{{ resumeData.qualifications.technicalSkills | join(', ') }}</span>
+        </li>
+        {% endif %}
+        {% if resumeData.qualifications.professionalSkills %}
+        <li>
+          <span class="font-semibold">Professional Skills:</span>
+          <span>{{ resumeData.qualifications.professionalSkills | join(', ') }}</span>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+
+    <!-- Education -->
+    <div class="education">
+      <span class="font-bold">Education</span>
+      {% for edu in resumeData.education %}
+      <div class="flex justify-between">
+        <div class="ml-8">
+          <span class="block">{{ edu.university }}</span>
+          <span class="block font-bold">Major: {{ edu.major }}</span>
+          {% if edu.minor %}
+          <span class="block font-bold">Minor: {{ edu.minor }}</span>
+          {% endif %}
+          {% if edu.gpa %}
+          <span class="block">GPA: {{ edu.gpa }}</span>
+          {% endif %}
+        </div>
+        <div>
+          {% if edu.graduationYear %}
+          <span class="block">{{ edu.graduationYear }}</span>
+          {% endif %}
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+
+    <!-- Related Coursework -->
+    {% if resumeData.relatedCoursework %}
+    <div>
+      <span class="font-bold">Related Coursework</span>
+      <ul class="list-disc ml-8">
+        <span>{{ resumeData.relatedCoursework | join(', ') }}</span>
+      </ul>
+    </div>
+    {% endif %}
+
+    <!-- Honors -->
+    {% if resumeData.honors %}
+    <div>
+      <span class="font-bold">Honors</span>
+      <div class="ml-8">
+        {% for honor in resumeData.honors %}
+        <div>
+          <span>{{ honor.awardName }}, {{ honor.organizationName }}, {{ honor.city }}, {{ honor.state
+            }}</span>
+          <span class="float-right">{{ honor.date }}</span>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    {% endif %}
+
+    <!-- Internship Experience -->
+    {% if resumeData.internshipExperience %}
+    <div>
+      <span class="font-bold">Internship Experience</span>
+      {% for internship in resumeData.internshipExperience %}
+      <div class="ml-8">
+        <span class="font-bold">{{ internship.organizationName }}</span>
+        <span>{{ internship.city }}, {{ internship.state }}</span>
+        <span class="float-right">{{ internship.from }} - {{ internship.to }}</span>
+        <ul class="list-disc">
+          {% for bullet in internship.about.split('\\n') %}
+          <li>{{ bullet }}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
+
+    <!-- Work Experience -->
+    {% if resumeData.workExperience %}
+    <div>
+      <span class="font-bold">Work Experience</span>
+      {% for work in resumeData.workExperience %}
+      <div class="ml-8">
+        <span class="font-bold">{{ work.jobTitle }}</span>
+        <span>{{ work.organizationName }}</span>
+        <span>{{ work.city }}, {{ work.state }}</span>
+        <span class="float-right">{{ work.from }} - {{ work.to }}</span>
+        <ul class="list-disc ml-4">
+          {% for bullet in work.about.split('\\n') %}
+          <li>{{ bullet }}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
+
+    <!-- Leadership Experience -->
+    {% if resumeData.leadershipExperience %}
+    <div>
+      <span class="font-bold">Campus Involvement & Leadership</span>
+      {% for leadership in resumeData.leadershipExperience %}
+      <div class="ml-8">
+        <span>{{ leadership.title }}</span>
+        <span>{{ leadership.clubName }}</span>
+        <span class="float-right">{{ leadership.date }}</span>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
+
+    <!-- Volunteer Experience -->
+    {% if resumeData.volunteerExperience %}
+    <div>
+      <span class="font-bold">Volunteer Experience</span>
+      {% for volunteer in resumeData.volunteerExperience %}
+      <div class="ml-8">
+        <span>{{ volunteer.organizationName }}</span>
+        <span>{{ volunteer.city }}, {{ volunteer.state }}</span>
+        <span class="float-right">{{ volunteer.date }}</span>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
+  </div>
+</body>
+
 </html>
